--- a/css/stijl.css
+++ b/css/stijl.css
@@ -123,7 +123,7 @@ a:visited img {
 #womb.linear li img {
   display: block;
   max-width: 100%;
-  max-height: 1000px;
+  max-height: none;
 }
 #womb li img.imgHover {
   outline: none;
